--- a/style.css
+++ b/style.css
@@ -119,12 +119,81 @@ body {
 /*--------------------------------------------------------*/
 
 .main-body {
+    justify-content: space-around;
     height: 80%;
     display: flex;
     margin: 50px 0 0 0;
-    gap: 50px;
-    padding: 0 20px 0 20px;
     
+}
+
+.filter-and-img-contianer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 290px;
+    height: 90%;
+}
+
+.request-button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.request-button {
+    height: 220px;
+    border-radius: 10px;
+    font-size: 35px;
+    border: none;
+    background-color: #A20E0E;
+    color: #F4F3F0;
+    width: 250px;
+    transition: all 0.3s;
+    font-weight: 600;
+}
+
+.request-button:hover {
+    border:5px solid #A20E0E;
+    background-color: #F4F3F0;
+    color:#A20E0E;
+}
+
+.request-button:active {
+    border:5px solid #db3333;
+    background-color: #db3333;
+    color: #DEDDDB;
+}
+
+.logo-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.img-sign-container {
+    height: 290px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E4E3E0;
+    margin: 40px 0 0 0;
+    border-radius: 50%;
+}
+
+.img-sign-wrapper {
+    height: 290px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 24px 0 0 0;
+}
+
+.name-sign {
+    text-align: center;
+    color: #0A3D33;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 .main-body-filter-container {
@@ -135,8 +204,6 @@ body {
     padding:20px;
     height: 400px;
     width: 250px;
-    position: sticky;
-    top:50px;
     background-color: #0A3D33;
     align-items: center;
     border-radius: 10px;
@@ -192,23 +259,141 @@ body {
 }
 
 .filter-search-button:active {
-    background-color: #DC935B;
-    color: #fff;
+    background-color: #0F594A;
+    color: #f4f3f0;
 }
 
 
 .main-body-cards-container {
-    width: calc(100% - 250px);
+    width: 80%;
     border: 5px solid #0A3D33;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+    justify-content: space-around;
+}
+
+.main-body-cards-container::-webkit-scrollbar-thumb {
+    background: #0A3D33; 
+    border-radius: 30px;
+    background-clip: content-box;
+    border: 5px solid #f4f3f0;
+}
+
+.main-body-cards-container::-webkit-scrollbar-track {
     border-radius: 10px;
 }
 
+.main-body-cards-container::-webkit-scrollbar {
+    width: 15px;  
 
-/*--------------------------------------------------------*/
-/*                            FOOTER                      */
-/*--------------------------------------------------------*/
+}
 
-.footer {
-    height: 10%;    
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    align-items: flex-start;
+    border: 4px solid #0A3D33;
+    margin: 0 0 30px 0;
+}
+
+.card-button {
+    margin: 0 20px 0 0;
+    font-size: 16px;
+    font-weight: 600;
+    transition: all 0.3s;
+    cursor: pointer;
+    background-color: #f4f3f0;
+    color: #0A3D33;
+    border: 2px solid #0A3D33;
+    border-radius: 5px;
+    height: 60px;
+    width: 150px;
+}
+
+.card-button:hover {
+    background-color:  #0A3D33 ;
+    color: #f4f3f0;
+}
+
+.card-button:active {
+    background-color: #E7E6E3;
+    color: #0A3D33;
+}
+
+
+.card-info-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-info-sign-container {
+    border-top: 2px solid #0A3D33;
+    display: flex;
+    gap: 20px;
+    padding: 0 0 0 10px;
+}
+
+.icon-wrapper {
+    display: flex;
+    gap: 20px;
+}
+
+.card-info-price-container {
+    border-top: 2px solid #0A3D33;
+    gap: 5px;
+    padding: 0 0 0 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+}
+
+.card-info-sign {
+    font-size: 36px;
+}
+
+.card-price {
+    font-size: 36px;
+}
+
+.card-img {
+    height: 250px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.card-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+}
+
+.fa-arrow-up,
+.fa-bed,
+.fa-layer-group,
+.fa-location-dot {
+    font-size: 20px;
+}
+
+.fa-dollar-sign {
+    font-size: 35px;
+    color: #137A63;
+}
+
+.fa-location-dot {
+    color: #c85108;
+}
+
+.fa-layer-group {
+    color: #a20e0e;
+}
+
+.fa-arrow-up {
+    color: #318CE7;
 }
 
